--- a/.gitignore
+++ b/.gitignore
@@ -429,3 +429,7 @@ TSWLatexianTemp*
 # option is specified. Footnotes are the stored in a file with suffix Notes.bib.
 # Uncomment the next line to have this generated file ignored.
 #*Notes.bib
+
+# Ignore Mac DS_Store files
+.DS_Store
+**/.DS_Store
